<resources>
    <string name="config_button_hint">Botón de configuración</string>
    <string name="break_info">Descanso</string>
    <string name="go_go">¡Vamos!</string>
    <string name="round_duration">Duración de la Ronda:</string>
    <string name="break_duration">Duración del Descanso:</string>
    <string name="interval">Cantidad de Rondas:</string>
    <string name="start">INICIAR</string>
    <string name="pause">PAUSAR</string>
    <string name="stop">DETENER</string>
    <string name="resume">RESUMIR</string>
    <string name="round">Ronda:</string>
    <string name="slash" translatable="false">/</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="total_duration">Duración Total:</string>
    <string name="timer_count_placeholder" translatable="false">  :  </string>
    <string name="well_done">¡Bien hecho!</string>
    <string name="u_ready">¡Preparados!</string>
    <string name="settings">AJUSTES</string>
    <string name="theme">Tema</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="back">Regresar</string>
    <string name="language">Idioma</string>
    <string name="regional_title">Regional</string>
    <string name="vibration">Vibración</string>
    <string name="sound">Sonido</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="but_update">Actualizar</string>
    <string name="terms">Términos y Condiciones</string>
    <string name="remove_ads">Remover Anuncios</string>
    <string name="current_session">Sesión actual: %s</string>
    <string name="press_twice_text">Presione Atrás nuevamente para salir.</string>
    <string name="update_string"><b>Hay una nueva versión disponible.</b>\nLe invitamos a actualizar la aplicación.</string>
    <string name="policies_flexifit" translatable="false">FLEXIFIT PRIVACY POLICY</string>

    <!-- Descripciones para el Speakable de opciones Acesibilidad -->
    <string name="back_button_description">Botón volver atras</string>
    <string name="icon_dark_mode_description">Ícono de modo oscuro</string>
    <string name="icon_language_description">Ícono de idioma</string>
    <string name="icon_vibration_description">Ícono de vibración del dispositivo</string>
    <string name="icon_terms_description">Ícono de terminos y condiciones</string>
    <string name="icon_remove_ads">Ícono de remover anuncios</string>
    <string name="pause_button_description">Botón de pausa</string>
    <string name="play_button_description">Botón de reproducir</string>
    <string name="stop_button_description">Botón de parar</string>
    <string name="purcharse_error">Ha ocurrido un error durante el proceso de compra.</string>
    <string name="purcharse_success">Compra realizada con éxito.</string>
    <string name="purcharse_restored">Compra restaurada</string>
    <string name="purcharse_status_unknown">La compra se está procesando.</string>
    <string name="purcharse_status_pending">La compra está pendiente, complete la transacción.</string>
    <string name="app_name" translatable="false">Training Timer</string>
    <string name="my_sessions_menu">Mis sesiones</string>
    <string name="save_session_menu">Guardar nueva sesión</string>
    <string name="save_session_changes">Guardar cambios</string>
    <string name="action_error">Ha ocurrido un error, intentelo nuevamente.</string>
    <string name="three_secs">3 SEG</string>
    <string name="three_secs_long">3 SEGUNDOS</string>
    <string name="five_secs">5 SEG</string>
    <string name="five_secs_long">5 SEGUNDOS</string>
    <string name="ten_secs">10 SEG</string>
    <string name="ten_secs_long">10 SEGUNDOS</string>
    <string name="fiveteen_secs">15 SEG</string>
    <string name="fiveteen_secs_long">15 SEGUNDOS</string>
    <string name="countdown_title">ALERTA CUENTA ATRÁS</string>
    <string name="preparation_time_title">TIEMPO DE PREPARACIÓN</string>
    <string name="device_language">Idioma del dispositivo</string>
    <string name="english">Inglés</string>
    <string name="spanish">Español</string>
    <string name="portuguese">Portugués</string>
    <string name="change_language_title">CAMBIAR IDIOMA</string>
    <string name="countdown_text">Cuenta atrás</string>
    <string name="preparing_time_text">Tiempo de preparación</string>
    <string name="change_sound_text">Cambiar sonido</string>
    <string name="whistle">Silvato</string>
    <string name="bell">Campana</string>
    <string name="no_sessions">Aún no tiene sesiones guardadas.</string>
    <string name="my_sessions_title">MIS SESIONES</string>
    <string name="load_session_option">CARGAR</string>
    <string name="cancel_option">CANCELAR</string>
    <string name="delete_option">ELIMINAR</string>
    <string name="delete_session">ELIMINAR SESIÓN</string>
    <string name="delete_session_message">¿Está seguro que desea eliminar la sesión: %s?</string>
    <string name="session_deleted">Sesión eliminada.</string>
    <string name="undo_option">DESHACER</string>
    <string name="session_restored">Sesión restaurada.</string>
    <string name="save_session">GUARDAR SESIÓN</string>
    <string name="save_option">GUARDAR</string>
    <string name="session_saved">Sesión guardada.</string>
    <string name="limit_session">Ya ha alcanzado el límite de sesiones.</string>
    <string name="session_name">Nombre de la sesión</string>
    <string name="session_in_progress">Sesión en progreso</string>
    <string name="workout_progress">Entrenamiento en curso…</string>
    <string name="session_ended">Sesión finalizada</string>
    <string name="workout_ended">Entrenamiento finalizado.</string>
    <string name="min_roundtime_limit">Debe ingresar un tiempo mínimo de 5 segundos de descanso y por ronda.</string>
    <string name="privacy_policy" translatable="false">This privacy policy governs your use of the software application FlexiFit for Android mobile devices that was created by WMSoftware.\nWhat information we collect?\nFlexiFit application does not collect personal information like name, surname, age, date of birth, etc.\nWe use Google supplied APP performance tracking information to improve Application. This application only makes use of the sound your Android mobile phone to create the alarm.\nGoogle Analytics\nThis Application uses Google Analytics to help us analyze how you use app. It helps us to improve this product.\nThanks Google Analytics we know how long you use app, what kind of device you\'re using, where are you from and a little bit more. All this is used to improve the app.\nRead more about Google Analytics\nFirebase\nWe use Firebase to store all the app information. Information like personal data and manage the e-mail login to our app.\nYou can see the entire privacy policy of firebase here.\nhttps://firebase.google.com/support/privacy/?hl=es-419\nAdvertisement\nGoogle Admob privacy policy is here: https://support.google.com/admob/answer/6128543?hl=en.\nThird party vendors, including Google, use cookies to serve ads based on a user\'s prior visits to your website.\nContact\nTo contact us please use email: wilfredmoscote@gmail.com\n\n-Acknowledgements\nWe use these libraries to make FlexiFit:\n-shawnlin NumberPicker\n-mikhaellopez CircularProgressBar\n- Lottie\n- Google Fonts\n- Google Icons</string>
    <string name="default_notification_channel_id" translatable="false">2626</string>

    <string name="version_info" translatable="false">v%s By FlexiFit</string>
</resources>