<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TimerActivity">

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/timer_stop_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/stop_button_description"
            android:background="@drawable/boton_reproducir"
            android:foreground="@drawable/ic_stop" />

        <Button
            android:id="@+id/timer_pause_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/pause_button_description"
            android:background="@drawable/boton_reproducir"
            android:foreground="@drawable/ic_pause"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutTrainingInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round"
            android:layout_marginHorizontal="5dp"
            android:textSize="26sp"
            android:gravity="center_horizontal"
            android:textColor="?textAppearanceCaption"
            android:fontFamily="@font/poppinsmedium" />
        <TextView
            android:id="@+id/textCurrentRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            tools:text="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="26sp"
            android:gravity="center_horizontal"
            android:textColor="?textAppearanceCaption"
            android:fontFamily="@font/poppinsbold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/slash"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="26sp"
            android:gravity="center_horizontal"
            android:textColor="?textAppearanceCaption"
            android:fontFamily="@font/poppinsbold" />
        <TextView
            android:id="@+id/textTotalRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            tools:text="5"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="26sp"
            android:gravity="center_horizontal"
            android:textColor="?textAppearanceCaption"
            android:fontFamily="@font/poppinsbold" />
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/trainingAnimation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        app:lottie_rawRes="@raw/workout"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toBottomOf="@+id/layoutTrainingInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/timerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/timer_count_placeholder"
        android:textSize="64sp"
        android:textColor="?textAppearanceCaption"
        app:layout_constraintBottom_toBottomOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="@+id/progress"
        app:layout_constraintStart_toStartOf="@+id/progress"
        app:layout_constraintTop_toTopOf="@+id/progress" />
    <TextView
        android:id="@+id/timerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/progress"
        app:layout_constraintStart_toStartOf="@+id/progress"
        app:layout_constraintTop_toBottomOf="@+id/timerCount" />
    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        app:cpb_background_progressbar_color_direction="top_to_bottom"
        app:cpb_background_progressbar_color_end="#CFCFCF"
        app:cpb_background_progressbar_color_start="#B8B8B8"
        app:cpb_background_progressbar_width="20dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="#3f51b5"
        app:cpb_progressbar_width="20dp"
        app:cpb_round_border="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/back"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="10dp"
        app:cornerRadius="30dp"
        android:visibility="gone"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>